# pingpong

./: .goreleaser.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  gotchas.md  pingpong.toml
.github/workflows/: ci.yml  release.yml
.private-journal/2025-06-14/: 14-39-58-506380.embedding  14-39-58-506380.md
docs/superpowers/plans/: 2026-06-08-pingpong-robustness-hardening.md  2026-06-26-goreleaser-migration.md
docs/superpowers/specs/: 2026-06-08-pingpong-robustness-design.md  2026-06-26-goreleaser-migration-design.md
scripts/: release.sh  update-homebrew-formula.sh
src/: app.rs  config.rs  main.rs  ping.rs  probe.rs  stats.rs  status.rs  tui.rs
